--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@ a:visited {
     background-color: #ddd;
 }
 
-.button.toolbar-button {
+.button.toolbar-button, .toolbar-item {
     height: 42px;
     line-height: 42px;
     border-radius: 0;
