--- a/css/main.css
+++ b/css/main.css
@@ -589,9 +589,9 @@ a:visited {
     padding-right: 20px;
 }
 
-.button.emphasized {
+/*.button.emphasized {
     font-weight: bold;
-}
+}*/
 
 .button.emphasized.hover {
     background-color: #e35765;
