--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ a:visited {
 .nav-button.selected-nav {
     color: #ffffff;
     text-decoration: none;
-    background-color: #e35765;
+    background-color: #ddd;
     font-weight: bold;
 }
 
@@ -487,12 +487,6 @@ a:visited {
 
 .toolbar-item {
     display: inline-block;
-}
-
-.button.menu-button {
-    border-radius: 0;
-    color: #f6f6f6;
-    font-size: 1.1em;
 }
 
 .button.toolbar-button.hover {
