--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,7 @@ a:visited {
     padding: 6px 10px 6px 10px;
     width: 138px;
     resize: none;
-    text-align: left;
+    text-align: left !important;
 }
 
 .full-width {
@@ -981,8 +981,7 @@ a.link-title {
     margin: 0;
 }
 
-.menu > *:not(.menu-item), 
-.menu > *:not(.search-box) {
+.menu > *:not(.menu-item) {
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
